--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --c-primary:  #961F1Cff;
+  --c-ink:      #050608ff;
+  --c-graylite: #d8d8d8;
+  --c-maroon:   #562425;
+  --c-slate:    #7c7c82;
+  --c-gray:     #6c6c6c;
+  --c-brown:    #2c1212;
+  --c-graydark: #343434;
+}
