--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,9 @@
   --c-brown:    #2c1212;
   --c-graydark: #343434;
   --c-hover:    #f9a826;
+ 
+                        --c-secondary: #FEF2F2; /* Rosa muy claro para fondo sutil */
+                        --c-accent: #E53E3E; /* Rojo brillante para énfasis */
+                      
+                      
 }
